<resources>
    <string name="app_name">692group</string>
    <string name="login_button">Start</string>
    <string name="empty_db">empty data base</string>

    <!-- Strings related to InfoActivity [base] -->
    <string name="info_send_button">Send</string>
    <string name="hello_text">C любовью, \n[p.mazhnik|Староста♡]</string>
    <string name="empty_text">empty text</string>
    <string name="info_edit_button">Edit Data Base</string> <!--[v.1.1.0]-->

    <!-- Strings for New Year 18 [v.1.0.1 new_year] -->
    <string name="new_year_button">Поздравить с новым годом любимых одногруппников</string>
    <string name="new_year_1">С Наступающим!</string>
    <string name="new_year_2">Поздравляю Вас с наступающим Новым годом!🌲 \nВ Новом году хочу
        пожелать больше приятных моментов, отличного настроения и, главное, счастья!\nC любовью, \n[p.mazhnik|Староста♡]</string>

    <!-- Strings related to LoginFragment [v.1.0.2] -->
    <string name="title_activity_login">Login</string>
    <string name="in_login_hint">Login</string>
    <string name="in_password_hint">Password</string>
    <string name="sign_in_button_text">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This login is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="ok_button">OK</string>
    <string name="in_exit_button_text">EXIT</string>
    <string name="edit_id_text">VK ID</string>
    <string name="edit_name_text">Name</string>

    <string name="nonexistent_user_id">id is not found</string>
    <string name="group_new_user">new_user</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
</resources>
