<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="detailViewModel"
            type="com.pavel.a692group.presentation.users.UserDetailViewModel" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.pavel.a692group.EditUserActivity">

        <TextView
            android:id="@+id/edit_id_text"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/edit_id_text"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/edit_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:text="@={detailViewModel.inputId}"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />

        <TextView
            android:id="@+id/edit_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_name_text"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@={detailViewModel.inputName}"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <Button
                android:id="@+id/edit_user_ok_button"
                android:onClick="@{() -> detailViewModel.save()}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ok_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </LinearLayout>
    </LinearLayout>
</layout>
